# aoc-rust-template

./: Cargo.toml  README.md  day.template  justfile  renovate.json
.github/workflows/: check.yml  lint.yml  verify.yml
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  template.rs
src/day04/: mod.rs
src/day06/: mod.rs
src/day09/: mod.rs
src/day17/: parser.rs
src/day22/: part_1.rs
src/template/: mod.rs
