[package]
name = "aoc-template"
version = "0.0.0"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.65"

[dependencies]
anyhow = "1.0" # <- To easily handle errors
thiserror = "1.0" # <- To easily create new error types
grid = "0.9.0" # <- A 2d grid datastructure
nom = "7.1" # <- Parser combinator library (for advanced parsing)

[dev-dependencies]
rstest = { version = "0.15.0", default-features = false }

[profile.dev]
opt-level = 1
